Add new function set time

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = lgt8f
 board = lgt8f328d
 framework = arduino
+lib_deps = 
+	arduino-libraries/Servo@^1.1.8
+	offcircuit/RTCDS1307@^1.0.0
+	gyverlibs/GyverButton@^3.8
